made changes to main.js to direct to individual robot profile

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -8,7 +8,7 @@
   <body>
     <main class="usersMain">
       {{#users}}
-        <a href={{id}}>
+        <a href="/{{username}}">
           <div class="robot">
             <img src={{avatar}} />
             <h2>
