made changes to main.js to implement switch to individual profiles

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -8,7 +8,7 @@
   <body>
     <main class="usersMain">
       {{#users}}
-        <a href="/{{username}}">
+        <a href="/user/{{id}}">
           <div class="robot">
             <img src={{avatar}} />
             <h2>
